--- a/index.html
+++ b/index.html
@@ -346,11 +346,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<!--<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
-					</div>
+					</div>-->
 				</div>
 				</div>
 
@@ -426,11 +426,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<!--<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
-					</div>
+					</div>-->
 				</div>
 				</div>	
 				<div class="colorlib-narrow-content">
@@ -484,11 +484,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 						</div>
 						
 					</div>
-					<div class="row">
+					<!--<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
-					</div>
+					</div>-->
 				</div>
 				</div>
 	
@@ -520,11 +520,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 							</div>
 						</div>
 						
-					<div class="row">
+					<!--<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
-					</div>
+					</div>-->
 				</div>
 				</div>
 			</section>
@@ -593,7 +593,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 					</div>
 				</div>
 			</section>
-s
 
 		</div><!-- end:colorlib-main -->
 	</div><!-- end:container-wrap -->
