--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 										<span class="heading-meta">O meni</span>
 										<h2 class="colorlib-heading">Tko sam ja?</h2>
 										<p><strong>Ja sam Danijela Mičuda,</strong> završila sam srednju školu za web dizajnera, nakon toga sam upisala fakultet "Sveučilište Sjever", smjer "Multimedija, oblikovanje i primjena" te ga uspješno završila 2019. godine.</p>
-										<p>U slobodno vrijeme bavim se nogometom, jahanjem, šahom te fotografijom.</p>
 									</div>
 								</div>
 							</div>
@@ -139,71 +138,71 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>U ovih sedam godina, naučila sam osnove mnogih programa, a ispod su navedeni samo oni koje poznajem najbolje.</p>
+							<p>Popis programa s kojima radim: </p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft"><br>
 							<div class="progress-wrap">
 								<h3>Indesign, Illustrator, Photoshop</h3>
-								<div class="progress">
+								<!-- <div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:75%"> 
 								    <span>75%</span>
-								  	</div>
+								  	</div> -->
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap"><br>
 								<h3>JavaScript, C++</h3>
-								<div class="progress">
+								<!-- <div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="50"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
 								    <span>50%</span>
-								  	</div>
+								  	</div> -->
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>HTML/CSS</h3>
-								<div class="progress">
+								<!-- <div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <span>90%</span>
-								  	</div>
+								  	</div> -->
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>Premiere, Media Composer</h3>
-								<div class="progress">
+								<!-- <div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
 								    <span>70%</span>
-								  	</div>
+								  	</div> -->
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>Autodesk Maya, Unity</h3>
-								<div class="progress">
+								<!-- <div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
-								    <span>50%</span>
-								  	</div>
+								    <span>50%</span> 
+								  	</div> -->
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>Database and MySql</h3>
-								<div class="progress">
+								<!-- <div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
 								    <span>50%</span>
-								  	</div>
+								  	</div> -->
 								</div>
 							</div>
 						</div>
@@ -223,6 +222,19 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
+						 
+						 <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-2">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2><a href="#">Junior retušer </a> <span>2020 - ...</span></h2>
+					                  <p>Freelancer Upwork</p>
+					               </div>
+					            </div>
+					         </article>
+						 
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
