--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft"><br>
 							<div class="progress-wrap">
 								<h3>Indesign, Illustrator, Photoshop</h3>
-								<!-- <div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
+								 <div class="progress">
+								 	<!-- <div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%"> 
 								    <span>75%</span>
 								  	</div> -->
@@ -154,8 +154,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap"><br>
 								<h3>JavaScript, C++</h3>
-								<!-- <div class="progress">
-								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="50"
+								<div class="progress">
+								 	<!-- <div class="progress-bar color-2" role="progressbar" aria-valuenow="50"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
 								    <span>50%</span>
 								  	</div> -->
@@ -165,8 +165,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>HTML/CSS</h3>
-								<!-- <div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
+								<div class="progress">
+								 <!-- 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <span>90%</span>
 								  	</div> -->
@@ -176,8 +176,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>Premiere, Media Composer</h3>
-								<!-- <div class="progress">
-								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
+								<div class="progress">
+								 	<!-- <div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
 								    <span>70%</span>
 								  	</div> -->
@@ -187,8 +187,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>Autodesk Maya, Unity</h3>
-								<!-- <div class="progress">
-								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
+								<div class="progress">
+								 <!-- 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
 								    <span>50%</span> 
 								  	</div> -->
@@ -198,8 +198,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>Database and MySql</h3>
-								<!-- <div class="progress">
-								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
+								<div class="progress">
+								 <!-- 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
 								    <span>50%</span>
 								  	</div> -->
