--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 					               </div>
 					               <div class="timeline-label">
 					               	<h2><a href="#">Junior retušer </a> <span>2020 - ...</span></h2>
-					                  <p>Freelancer Upwork</p>
+					                  <p>Calzedonia Digital</p>
 					               </div>
 					            </div>
 					         </article>
